<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:id="@+id/progressBar"
        android:visibility="gone"/>

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_title"
            android:id="@+id/textView_label_login"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailText"
            android:layout_below="@+id/textView_label_login"
            android:layout_marginTop="25dp"
            android:hint="@string/hint_email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:hint="@string/hint_password" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:id="@+id/buttonLogin"
            android:layout_gravity="center_horizontal" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/login_button_twtr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/no_account_label"
            android:id="@+id/textView_noAccount"
            android:textSize="12dp"
            android:layout_marginTop="32dp"
            android:layout_below="@+id/buttonLogin"
            android:layout_centerHorizontal="true"
            android:textStyle="bold|italic"
            android:clickable="true"
            android:onClick="createUser"
            android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>